# Galileo

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirement.txt  requirements.txt
agents/: __init__.py  math_agent.py
agents_subject/: base_agent.py  history.py  init.py  mathematics.py  science.py
myenv/: pyvenv.cfg
scripts/: action.py  main.py  prompt.py  transformer.py
src/: code_base.py
